set up sass stylesheets and tested working.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,13 +8,15 @@
   <script type="text/javascript" src="/vendors/angular.min.js"></script>
   <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
   <script type="text/javascript" src="/vendors/ui-bootstrap.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-  <script type="text/javascript" src="/scripts/data_factory.js"></script>
-  <script type="text/javascript" src="/scripts/controllers/task_controller.js"></script>
+  <script type="text/javascript" src="/scripts/client_app.js"></script>
+  <!-- <script type="text/javascript" src="/scripts/data_factory.js"></script> -->
+  <script type="text/javascript" src="/scripts/controllers/chord_names_controller.js"></script>
+  <script type="text/javascript" src="/scripts/controllers/recommendations_controller.js"></script>
 
-  <link rel="stylesheet" href="/styles/reset.css" />
-  <link rel="stylesheet" href="/styles/normalize.css" />
-  <link rel="stylesheet" href="/styles/custom.css" />
+
+  <link rel="stylesheet" href="/styles/css/reset.css" />
+  <link rel="stylesheet" href="/styles/css/normalize.css" />
+  <link rel="stylesheet" href="/styles/css/index.css" />
 </head>
 
 <body ng-app="myApp">
