chord_names wireframe chord cards are done.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -22,9 +22,10 @@
 <body ng-app="myApp">
 
   <header>
-    <h2 class="logo">Bridge</h2>
+
     <nav>
       <ul>
+        <li><a href="#chord_names">Bridge</a></li>
         <li><a href="#chord_names">Chord Names</a></li>
         <li><a href="#recommendations">Recommendations</a></li>
       </ul>
