--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -1,4 +1,51 @@
 body {
-  background: #ddd; }
+  background: #ddd;
+  font-size: 1.5 rem;
+  text-align: center;
+  font-family: "Verdana", sans-serif; }
+
+.clearfix {
+  overflow: contain; }
+
+.row {
+  display: flex; }
+
+.selector {
+  flex: 1;
+  background-color: grey;
+  height: 8rem;
+  margin: 3rem; }
+
+.chords {
+  background-color: #fff; }
+
+.chord-card {
+  flex: 1;
+  background-color: grey;
+  height: 100%;
+  margin: 0 1rem;
+  display: inline; }
+
+.chord {
+  width: 100%;
+  height: 8rem;
+  background-color: lightblue;
+  display: block;
+  margin: 0 auto; }
+
+h4 {
+  margin: 2em 1em; }
+
+header {
+  background-color: #222;
+  color: #fff; }
+
+li {
+  display: inline-block;
+  margin: 1rem; }
+
+a {
+  color: #fff;
+  text-decoration: none; }
 
 /*# sourceMappingURL=index.css.map */
