--- a/public/styles/scss/_base.scss
+++ b/public/styles/scss/_base.scss
@@ -1,4 +1,44 @@
+@import "variables";
 
 body {
   background: #ddd;
+  font-size: 1.5 rem;
+  text-align: center;
+  font-family: $primary;
 }
+
+.clearfix {
+  overflow: contain;
+}
+
+.row {
+  display: flex;
+}
+  .selector {
+    flex: 1;
+    background-color: grey;
+    height: 8rem;
+    margin: 3rem;
+  }
+//
+.chords {
+  background-color: $white;
+}
+  .chord-card {
+    flex: 1;
+    background-color: grey;
+    height: 100%;
+    margin: 0 1rem;
+    display: inline;
+  }
+    .chord {
+      width: 100%;
+      height: 8rem;
+      background-color: lightblue;
+      display: block;
+      margin: 0 auto;
+    }
+
+    h4{
+      margin: 2em 1em;
+    }
