--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -1,6 +1,7 @@
 
 @import "base";
 @import "nav";
+@import "carousel";
 @import "media_queries";
 @import "chord_names";
 @import "recommendations";
