--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -1,3 +1,6 @@
+.nav, .pagination, .carousel, .panel-title a {
+  cursor: pointer; }
+
 body {
   background: #ddd;
   font-size: 1.5 rem;
@@ -7,17 +10,20 @@ body {
 .clearfix {
   overflow: contain; }
 
+.key-name {
+  font-size: 14rem; }
+
 .row {
   display: flex; }
 
 .selector {
   flex: 1;
-  background-color: grey;
-  height: 8rem;
+  height: 100%;
   margin: 3rem; }
 
 .chords {
-  background-color: #fff; }
+  background-color: #fff;
+  margin: 4rem 0 0 0; }
 
 .chord-card {
   flex: 1;
@@ -34,7 +40,7 @@ body {
   margin: 0 auto; }
 
 h4 {
-  margin: 2em 1em; }
+  margin: .5em 1em; }
 
 header {
   background-color: #222;
@@ -47,5 +53,26 @@ li {
 a {
   color: #fff;
   text-decoration: none; }
+
+#slides_control > div {
+  height: 200px; }
+
+img {
+  margin: auto;
+  width: 400px; }
+
+#slides_control {
+  position: absolute;
+  width: 400px;
+  left: 50%;
+  top: 20px;
+  margin-left: -200px; }
+
+.carousel-control {
+  background: none;
+  background-color: #222; }
+
+.carousel-indicators li {
+  display: none; }
 
 /*# sourceMappingURL=index.css.map */
