--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,7 +7,10 @@
   <!-- <link href="//fonts.googleapis.com/css?family=Droid+Serif:700,700italic" rel="stylesheet" type="text/css"> -->
   <script type="text/javascript" src="/vendors/angular.min.js"></script>
   <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
-  <script type="text/javascript" src="/vendors/ui-bootstrap.js"></script>
+  <script type="text/javascript" src="/vendors/angular-animate.min.js"></script>
+
+  <script type="text/javascript" src="/vendors/ui-bootstrap-tpls.js"></script>
+
   <script type="text/javascript" src="/scripts/client_app.js"></script>
   <!-- <script type="text/javascript" src="/scripts/data_factory.js"></script> -->
   <script type="text/javascript" src="/scripts/controllers/chord_names_controller.js"></script>
@@ -16,6 +19,7 @@
 
   <link rel="stylesheet" href="/styles/css/reset.css" />
   <link rel="stylesheet" href="/styles/css/normalize.css" />
+  <link rel="stylesheet" href="/vendors/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/css/index.css" />
 </head>
 
