brought in a script that generates guitar chord svgs. script is tested and working.

--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -42,6 +42,17 @@ body {
 h4 {
   margin: .5em 1em; }
 
+.test {
+  width: 400px;
+  height: 400px;
+  background: #ddd; }
+
+svg.chordChart .grid {
+  stroke: black; }
+
+svg.chordChart .labels {
+  fill: white; }
+
 header {
   background-color: #222;
   color: #fff; }
