--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="/vendors/ui-bootstrap-tpls.js"></script>
 
   <script type="text/javascript" src="/scripts/client_app.js"></script>
+  <script type="text/javascript" src="/scripts/chart_maker.js"></script>
   <!-- <script type="text/javascript" src="/scripts/data_factory.js"></script> -->
   <script type="text/javascript" src="/scripts/controllers/chord_names_controller.js"></script>
   <script type="text/javascript" src="/scripts/controllers/recommendations_controller.js"></script>
