--- a/public/views/templates/chord_names.html
+++ b/public/views/templates/chord_names.html
@@ -18,7 +18,7 @@
 <!--  -->
 <div class="selector">
   <h3>Capo Position</h3>
-    <uib-carousel active="active2" no-wrap="noWrapSlides">
+    <uib-carousel active="activeCapo" no-wrap="noWrapSlides">
       <uib-slide ng-repeat="slide in capoPositions track by slide.id" index="slide.id">
         <h1 class="key-name"> {{slide.fret}}</h1>
         <div class="carousel-caption">
