added keymaker controller to make arrays from the returned arrays of chords.

--- a/public/views/templates/chord_names.html
+++ b/public/views/templates/chord_names.html
@@ -42,6 +42,6 @@
   </div>
 </div>
 
-<div class="test">
+<div class="test" ng-controller="Key_makerController">
 <svg class="chord" id="exampleChart"></svg>
 </div>
