stripKeyInfo function is working.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="/scripts/data_factory.js"></script>
   <script type="text/javascript" src="/scripts/controllers/chord_names_controller.js"></script>
   <script type="text/javascript" src="/scripts/controllers/recommendations_controller.js"></script>
-  <script type="text/javascript" src="/scripts/key_maker.js"></script>
+  <script type="text/javascript" src="/scripts/controllers/key_maker.js"></script>
 
 
   <link rel="stylesheet" href="/styles/css/reset.css" />
