--- a/public/styles/scss/_base.scss
+++ b/public/styles/scss/_base.scss
@@ -30,12 +30,12 @@ body {
   }
 //
 .chords {
-  background-color: $white;
+  // background-color: $white;
   margin: 4rem 0 0 0;
 }
   .chord-card {
     flex: 1;
-    background-color: grey;
+    // background-color: grey;
     height: 100%;
     margin: 0 1rem;
     display: inline;
