--- a/public/styles/scss/_base.scss
+++ b/public/styles/scss/_base.scss
@@ -5,8 +5,11 @@
 //
 
 body {
+  // background: url("../../images/jam-sunset.jpg"), no-repeat center center, gray;
+  // background-blend-mode: screen;
+  // background-size: contain;
   background: #ddd;
-  font-size: 1.5 rem;
+  font-size: 1.5rem;
   text-align: center;
   font-family: $primary;
 }
@@ -50,6 +53,7 @@ body {
 
     h4{
       margin: .5em 1em;
+      font-size: 1.5em;
     }
 
     .test {
