--- a/public/views/templates/chord_names.html
+++ b/public/views/templates/chord_names.html
@@ -12,6 +12,9 @@
             <!-- <p>{{slide.text}}</p> -->
           </div>
         </uib-slide>
+        <p>
+          {{active.key}}
+        </p>
       </uib-carousel>
     </div>
 
@@ -35,42 +38,42 @@
     <div class="chord-card clearfix">
       <h4> I </h4>
       <svg class="chord" id="1"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[0]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> II </h4>
       <svg class="chord" id="2"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[1]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> III </h4>
       <svg class="chord" id="3"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[2]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> IV </h4>
       <svg class="chord" id="4"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[3]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> V </h4>
       <svg class="chord" id="5"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[4]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> VI </h4>
       <svg class="chord" id="6"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[5]}} </h4>
     </div>
 
     <div class="chord-card clearfix">
       <h4> VII </h4>
       <svg class="chord" id="7"></svg>
-        <h4 class="transposed">  </h4>
+        <h4 class="transposed"> {{newKey[6]}} </h4>
     </div>
 </div>
