--- a/public/views/templates/recommendations.html
+++ b/public/views/templates/recommendations.html
@@ -1,11 +1,79 @@
-<div  class="selector" style="height: 305px">
-    <uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-      <uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-        <img ng-src="{{slide.image}}" style="margin:auto;">
+<div class="row selectors">
+
+  <div class="selector">
+      <h3>Select A Key</h3>
+      <uib-carousel active="active" no-wrap="noWrapSlides">
+        <uib-slide ng-repeat="slide in openKeys track by slide.id" index="slide.id">
+          <h1 class="key-name" ng-model="key"> {{slide.key}} </h1>
+
+
+          <div class="carousel-caption">
+            <!-- <h4>Slide {{slide.id}}</h4> -->
+            <!-- <p>{{slide.text}}</p> -->
+          </div>
+        </uib-slide>
+        <p>
+          {{active.key}}
+        </p>
+      </uib-carousel>
+    </div>
+
+<!--  -->
+<div class="selector">
+  <h3>Recommendation</h3>
+    <uib-carousel active="activeCapo" no-wrap="noWrapSlides">
+      <uib-slide ng-repeat="slide in capoPositions track by slide.id" index="slide.id">
+        <h1 class="key-name" ng-model="capoPosition"> {{slide.fret}}</h1>
         <div class="carousel-caption">
-          <h4>Slide {{slide.id}}</h4>
+          <!-- <h4>Slide {{slide.id}}</h4> -->
           <!-- <p>{{slide.text}}</p> -->
         </div>
       </uib-slide>
     </uib-carousel>
   </div>
+</div>
+<h1>Open Chords in the key of </h1>
+
+<div class="row chords" ng-controller="Key_makerController">
+    <div class="chord-card clearfix">
+      <h4> I </h4>
+      <svg class="chord" id="1"></svg>
+        <h4 class="transposed"> {{newKey[0]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> II </h4>
+      <svg class="chord" id="2"></svg>
+        <h4 class="transposed"> {{newKey[1]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> III </h4>
+      <svg class="chord" id="3"></svg>
+        <h4 class="transposed"> {{newKey[2]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> IV </h4>
+      <svg class="chord" id="4"></svg>
+        <h4 class="transposed"> {{newKey[3]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> V </h4>
+      <svg class="chord" id="5"></svg>
+        <h4 class="transposed"> {{newKey[4]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> VI </h4>
+      <svg class="chord" id="6"></svg>
+        <h4 class="transposed"> {{newKey[5]}} </h4>
+    </div>
+
+    <div class="chord-card clearfix">
+      <h4> VII </h4>
+      <svg class="chord" id="7"></svg>
+        <h4 class="transposed"> {{newKey[6]}} </h4>
+    </div>
+</div>
