--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -2,6 +2,7 @@
 @import "base";
 @import "nav";
 @import "carousel";
+@import "chord_charts";
 @import "media_queries";
 @import "chord_names";
 @import "recommendations";
