--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -2,7 +2,10 @@
 //colors
 $black: #222;
 $white: #fff;
+$light-gray: #ddd;
 $green: hsl(164, 81%, 45%);
+$red: hsl(345, 95%, 24%);
+$purple: hsl(271, 88%, 79%);
 
 
 // fonts
