--- a/public/views/templates/recommendations.html
+++ b/public/views/templates/recommendations.html
@@ -9,17 +9,11 @@
       <option value=""></option>
     </select>
   </form>
-  <p>
-    {{selectedAllKey.Key}}
-  </p>
-  <p>
-    {{recommendation}}
-  </p>
 
   <!--  -->
 
 </div>
-<h1>To play in {{selectedAllKey.Key}}, use the open chords in {{selectedAllKey.Key}} with the capo on {{fret}}. </h1>
+<h1>To play in {{selectedAllKey.Key}}, use the open chords in {{selectedKey}} with the capo on {{capo}}. </h1>
 
 <div class="row chords" >
   <div class="chord-card clearfix">
