--- a/public/styles/scss/_base.scss
+++ b/public/styles/scss/_base.scss
@@ -5,13 +5,16 @@
 //
 
 body {
-  // background: url("../../images/jam-sunset.jpg"), no-repeat center center, gray;
-  // background-blend-mode: screen;
-  // background-size: contain;
-  background: #eee;
+  background: url("../../images/guitar-1.jpeg"), no-repeat center center, $black;
+  background-blend-mode: soft-light;
+  background-size: cover;
+  // background: $black;
   font-size: 1.5rem;
+  letter-spacing: .01em;
   text-align: center;
   font-family: $primary;
+  color: $white;
+
 }
 
 .clearfix {
@@ -33,14 +36,14 @@ body {
   }
 //
 .chords {
-  // background-color: $white;
+  // background-color: $black;
   margin: 4rem 0 0 0;
 }
   .chord-card {
     flex: 1;
     // background-color: grey;
     height: 100%;
-    padding: 0 1rem;
+    padding: 0 .5rem;
     display: inline;
   }
     .chord {
@@ -51,12 +54,26 @@ body {
     }
 
     h4{
-      margin: .5em 1em;
+      padding: .5em 1em;
       font-size: 1.5em;
+      margin-bottom: 0;
     }
+      .transposed {
+        background: $black;
+        color: $green;
+      }
+      .numeral {
+        width: 90%;
+        margin: 0 auto;
+      }
 
-    .test {
-      width:400px;
-      height: 400px;
-      background: #ddd;
-    }
+.major {
+  border-bottom: .15em solid $red;
+}
+
+.minor {
+  border-bottom: .15em solid $green;
+}
+.seventh {
+  border-bottom: .15em solid $purple;
+}
