--- a/public/views/templates/chord_names.html
+++ b/public/views/templates/chord_names.html
@@ -15,49 +15,51 @@
   <!--  -->
 
 </div>
-<h1>Open Chords in the key of {{selectedKey}}. </h1>
-<h1>With a Capo on {{capoPosition}}, you are now playing in {{newKey[0]}}. </h1>
 
-<div class="row chords" >
+<div class="info">
+  <h1>Open Chords in the key of {{selectedKey}}. </h1>
+  <h1>With a Capo on {{capoPosition}}, you are now playing in {{newKey[0]}}. </h1>
+</div>
+<div class="row chords">
 
   <div class="chord-card clearfix">
-    <h4> I </h4>
+    <h4 class="numeral major"> I </h4>
     <svg class="chord" id="1"></svg>
     <h4 class="transposed"> {{newKey[0]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> II </h4>
+    <h4 class="numeral minor"> II </h4>
     <svg class="chord" id="2"></svg>
     <h4 class="transposed"> {{newKey[1]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> III </h4>
+    <h4 class="numeral minor"> III </h4>
     <svg class="chord" id="3"></svg>
     <h4 class="transposed"> {{newKey[2]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> IV </h4>
+    <h4 class="numeral major"> IV </h4>
     <svg class="chord" id="4"></svg>
     <h4 class="transposed"> {{newKey[3]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> V </h4>
+    <h4 class="numeral major"> V </h4>
     <svg class="chord" id="5"></svg>
     <h4 class="transposed"> {{newKey[4]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> VI </h4>
+    <h4 class="numeral minor"> VI </h4>
     <svg class="chord" id="6"></svg>
     <h4 class="transposed"> {{newKey[5]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> VII </h4>
+    <h4 class="numeral seventh"> VII </h4>
     <svg class="chord" id="7"></svg>
     <h4 class="transposed"> {{newKey[6]}} </h4>
   </div>
