--- a/public/views/templates/recommendations.html
+++ b/public/views/templates/recommendations.html
@@ -2,11 +2,9 @@
   <form class="form-inline chord-form">
     <label for="selectedAllKey">Choose a Key</label>
     <select name="selectedAllKey" class="form-control" ng-model="selectedAllKey" ng-options="key.Key for key in allKeys" ng-change="getRecommendation(selectedAllKey, recommendation)">
-      <option value=""></option>
     </select>
     <label for="recommendation">Choose a Recommendation</label>
     <select class="form-control" ng-model="recommendation" ng-options="recommendation for recommendation in recommendations" ng-change="getRecommendation(selectedAllKey,recommendation)">
-      <option value=""></option>
     </select>
   </form>
 
@@ -17,43 +15,43 @@
 
 <div class="row chords" >
   <div class="chord-card clearfix">
-    <h4> I </h4>
+    <h4 class="numeral major"> I </h4>
     <svg class="chord" id="1"></svg>
     <h4 class="transposed"> {{newKey[0]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> II </h4>
+    <h4 class="numeral minor"> II </h4>
     <svg class="chord" id="2"></svg>
     <h4 class="transposed"> {{newKey[1]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> III </h4>
+    <h4 class="numeral minor"> III </h4>
     <svg class="chord" id="3"></svg>
     <h4 class="transposed"> {{newKey[2]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> IV </h4>
+    <h4 class="numeral major"> IV </h4>
     <svg class="chord" id="4"></svg>
     <h4 class="transposed"> {{newKey[3]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> V </h4>
+    <h4 class="numeral major"> V </h4>
     <svg class="chord" id="5"></svg>
     <h4 class="transposed"> {{newKey[4]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> VI </h4>
+    <h4 class="numeral minor"> VI </h4>
     <svg class="chord" id="6"></svg>
     <h4 class="transposed"> {{newKey[5]}} </h4>
   </div>
 
   <div class="chord-card clearfix">
-    <h4> VII </h4>
+    <h4 class="numeral seventh"> VII </h4>
     <svg class="chord" id="7"></svg>
     <h4 class="transposed"> {{newKey[6]}} </h4>
   </div>
