--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -26,6 +26,21 @@ body {
   height: 100%;
   margin: 3rem; }
 
+form, label, select, option {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 400; }
+
+.form-group {
+  padding: .7em 0 .5em 1em;
+  background: #222; }
+
+.form-control {
+  letter-spacing: .04em;
+  background-color: transparent;
+  font-size: 2rem;
+  border: none; }
+
 .chords {
   margin: 4rem 0 0 0; }
 
@@ -48,7 +63,8 @@ h4 {
 
 .transposed {
   background: #222;
-  color: #16d09e; }
+  color: #16d09e;
+  background-blend-mode: multiply; }
 
 .numeral {
   width: 90%;
@@ -69,7 +85,8 @@ header {
   margin: 0 0 5vh 0;
   font-size: 2rem;
   text-transform: uppercase;
-  letter-spacing: .05em; }
+  letter-spacing: .05em;
+  background-blend-mode: multiply; }
 
 ul {
   margin: 0;
@@ -78,7 +95,11 @@ ul {
 li {
   display: inline-block;
   padding: 0.6em 1em;
-  height: 100%; }
+  height: 100%;
+  margin: 0;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s; }
   li:hover {
     background-color: #16d09e; }
 
