--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -3,10 +3,25 @@
 $black: #222;
 $white: #fff;
 $light-gray: #ddd;
+$grey: #666;
 $green: hsl(164, 81%, 45%);
 $red: hsl(345, 95%, 24%);
 $purple: hsl(271, 88%, 79%);
 
 
 // fonts
-$primary: 'Verdana', sans-serif;
+$primary: 'Lato', 'Tahoma', sans-serif;
+
+@font-face {
+    font-family: 'League Gothic';
+    src: url('../../fonts/league/leaguegothic-regular-webfont.eot');
+    src: url('../../fonts/league/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/league/leaguegothic-regular-webfont.woff') format('woff'),
+         url('../../fonts/league/leaguegothic-regular-webfont.ttf') format('truetype'),
+         url('../../fonts/league/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+$league: 'League Gothic', serif;
