--- a/public/views/templates/recommendations.html
+++ b/public/views/templates/recommendations.html
@@ -1,12 +1,12 @@
 <div class="selectors">
   <form class="form-inline chord-form">
     <div class="form-group">
-      <label for="selectedAllKey">Choose a Key</label>
+      <label for="selectedAllKey">Choose a Key:</label>
       <select name="selectedAllKey" class="form-control" ng-model="selectedAllKey" ng-options="key.Key for key in allKeys" ng-change="getRecommendation(selectedAllKey, recommendation)">
       </select>
     </div>
     <div class="form-group">
-      <label for="recommendation">Choose a Recommendation</label>
+      <label for="recommendation">Choose a Recommendation:</label>
       <select class="form-control" ng-model="recommendation" ng-options="recommendation for recommendation in recommendations" ng-change="getRecommendation(selectedAllKey,recommendation)">
       </select>
     </div>
@@ -15,7 +15,7 @@
   <!--  -->
 
 </div>
-<h1>To play in {{selectedAllKey.Key}}, use the open chords in {{selectedKey}} with the capo on {{capo}}. </h1>
+<h1>To play in <span class="">{{selectedAllKey.Key}}</span>, use the open chords in <span class="">{{selectedKey}}</span> with the capo on <span class="">{{capo}}</span>. </h1>
 
 <div class="row chords">
   <div class="chord-card clearfix">
